solved the paragraph spacing and responsive

--- a/programs.css
+++ b/programs.css
@@ -37,6 +37,7 @@ nav li .active {
 /*END OF NAVIGATION*/
 .small-6 {
     text-align: center;
+    padding-bottom: 5%;
 
 }
 
@@ -66,6 +67,7 @@ footer p {
     .small-6 {
         width: 50%;
         text-align: center;
+        padding-bottom: 3%;
 
     }
 
@@ -89,6 +91,7 @@ footer p {
     .small-6 {
         width: 100%;
         text-align: center;
+        padding-bottom: 5%;
 
     }
     .left{
